--- a/Triangle HTML.html
+++ b/Triangle HTML.html
@@ -1,14 +1,56 @@
 <html>
 <head>
     <title>WebGL - Simple Triangle</title>
+	<script type="text/javascript" src="Common/webgl-utils.js"></script>
+    <script type="text/javascript" src="Common/initShaders.js"></script>
+    <script type="text/javascript" src="Common/MV.js"></script>
+    <script type="text/javascript" src="TestTriangle.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body onload="InitDemo()">
+	<div id="menu">
+            <p>Gasket Settings</p><br>
+            <div id="propertybox">
+                <label for="division">Number of Subdivisions</label><br>
+                <input type="range" id="division" class="slider settings" name="division" min="1" max="5" step="1"
+                    value="3">
+                <input type="text" class="textbox" name="division" value="3" readonly><br>
+                <label for="scale">Scale</label><br>
+                <input type="range" id="scale" class="slider settings" name="scale" min="0.5" max="3" step="0.5"
+                    value="1.5">
+                <input type="text" class="textbox" name="scale" value="1.5" readonly><br>
+            </div>
+            <br>
+            <p>Additional Animation</p>
+            <br>
+            <div id="propertybox">
+                <label for="speed">Animation Speed</label><br>
+                <input type="range" id="speed" class="slider settings" name="speed" min="1" max="10" step="0.5"
+                    value="4">
+                <input type="text" class="textbox" name="speed" value="4" readonly><br>
+                <label for="rotateX">Rotation about x-axis</label>
+                <input type="checkbox" id="rotateX" name="rotateX" checked /><br>
+                <label for="rotateY">Rotation about y-axis</label>
+                <input type="checkbox" id="rotateY" name="rotateY" checked /><br>
+            </div>
+			<div id="propertybox">
+                <label for="color1" class="colorlabel">Colour 1</label>
+                <label for="color2" class="colorlabel">Colour 2</label>
+                <label for="color3" class="colorlabel">Colour 3</label>
+                <label for="color4" class="colorlabel">Colour 4</label><br>
+                <input type="color" id="color1" class="colorpicker" name="color1" value="#FFA631">
+                <input type="color" id="color2" class="colorpicker" name="color2" value="#E83845">
+                <input type="color" id="color3" class="colorpicker" name="color3" value="#346AB0">
+                <input type="color" id="color4" class="colorpicker" name="color4" value="#E389B9">
+            </div>
+            <input type="button" id="start-button" value="Start">
+            <input type="button" id="restart-button" value="Restart">
+        </div>
 <canvas id="game-surface" width="800" height="600">
     Error. Your browser does not support HTML5.
 </canvas>
 <br/>
 <b>Demo is above this hehe</b>
-<script src="TestTriangle.js"></script>
 </body>
 
 
