--- a/Triangle HTML.html
+++ b/Triangle HTML.html
@@ -5,19 +5,27 @@
     <title>WebGL - Simple Triangle</title>
 
     <script id="vertex-shader" type="x-shader/x-vertex">
-        attribute vec2 vPosition;
+        attribute vec3 vPosition;
+        attribute vec3 vColor;
+        varying vec4 color;
 
-        void main() {
-            gl_Position = vec4(vPosition, 0.0, 1.0);
+        void
+        main()
+        {
+        gl_Position = vec4(vPosition, 1.0);
+        color = vec4(vColor, 1.0);
         }
     </script>
 
     <script id="fragment-shader" type="x-shader/x-fragment">
         precision mediump float;
-        uniform vec4 uColor;
 
-        void main() {
-            gl_FragColor = uColor;
+        varying vec4 color;
+
+        void
+        main()
+        {
+        gl_FragColor = color;
         }
     </script>
 
